--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.0",
+    "@expo-google-fonts/roboto": "^0.2.0",
+    "@expo/vector-icons": "^12.0.0",
     "expo": "~43.0.2",
+    "expo-app-loading": "~1.2.1",
+    "expo-font": "~10.0.3",
     "expo-status-bar": "~1.1.0",
     "lottie-react-native": "4.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-maps": "0.28.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
