--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-shared-element": "0.8.2",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "0.17.1",
+    "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
